--- a/stlll.css
+++ b/stlll.css
@@ -16,15 +16,7 @@ header {
     padding: 20px;
     background-color: #333;
     color: white;
-    height: 4rem;
-}
-
-.logo {
-    font-size: 2rem;
-}
-
-nav {
-    width: 30rem;
+    height: 64px;
 }
 
 nav ul {
@@ -34,8 +26,8 @@ nav ul {
 }
 
 nav ul li a {
-    font-size: 1.2rem;
-    padding: 1rem;
+    font-size: 19.2px;
+    padding: 1px;
     text-decoration: none;
     color: white;
 }
@@ -47,7 +39,7 @@ nav ul li a:hover {
     cursor: pointer;
 }
 .Paybutton {
-    padding: 1rem;
+    padding: 16px;
     background-color: #0dac30;
     border: none;
     color: white;
@@ -61,13 +53,8 @@ nav ul li a:hover {
 .banner {
     text-align: center;
     background-color: #ffffff;
-    margin: 0 auto;
 }
 
-.banner img {
-    max-width: 100%;
-    height: auto;
-}
 .CallLogo {
     padding: 40px 0;
     margin: 0 10px;
@@ -100,7 +87,7 @@ nav ul li a:hover {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    margin-bottom: 1rem;
+    margin-bottom: 16px;
     resize: vertical;
 }
 .submit-button {
@@ -109,7 +96,7 @@ nav ul li a:hover {
     border: none;
     color: white;
     border-radius: 4px;
-    font-size: 1rem;
+    font-size: 16px;
     cursor: pointer;
 }
 .contact-info {
